# DeCoderPlugin

./: .gitignore  CMakeLists.txt  COPYING  DOCUMENTATION.md  README.md
JUCE/modules/juce_audio_plugin_client/VST3/: juce_VST3_Wrapper.cpp
JUCE/modules/juce_audio_processors/processors/: juce_AudioProcessor.h
Resources/: CMakeLists.txt
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
